--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "packageManager": "pnpm@10.12.2",
   "engines": {
     "node": ">=20"
+  },
+  "dependencies": {
+    "@eslint/js": "^9.31.0"
   }
 }
