--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,11 @@
     "VERCEL_URL",
     "VERCEL_PROJECT_PRODUCTION_URL",
     "VERCEL_ENV",
-    "NODE_ENV"
+    "NODE_ENV",
+    "ALGOLIA_APP_ID",
+    "ALGOLIA_ADMIN_API_KEY",
+    "ALGOLIA_INDEX_NAME",
+    "NEXT_PUBLIC_ALGOLIA_SEARCH_API_KEY"
   ],
   "tasks": {
     "build": {
