--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,7 @@
     "ALGOLIA_APP_ID",
     "ALGOLIA_ADMIN_API_KEY",
     "ALGOLIA_INDEX_NAME",
+    "NEXT_PUBLIC_ALGOLIA_APP_ID",
     "NEXT_PUBLIC_ALGOLIA_SEARCH_API_KEY"
   ],
   "tasks": {
