--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write .",
     "check-types": "tsc --noEmit",
     "index-blog": "tsx --env-file=.env.local scripts/index-blog.ts",
+    "reindex-blogs": "tsx --env-file=.env.local scripts/reindex.ts",
     "setup-algolia": "tsx --env-file=.env.local scripts/setup-algolia.ts",
     "setup:categories": "tsx --env-file=.env.local scripts/setup-categories.ts"
   },
