--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,12 @@
 {
   "buildCommand": "turbo build",
-  "outputDirectory": "apps/web/.next",
+  "outputDirectory": ".next",
   "devCommand": "turbo dev",
   "installCommand": "pnpm install",
   "framework": "nextjs",
   "functions": {
-    "apps/web/src/app/api/**": {
+    "src/app/api/**": {
       "maxDuration": 30
     }
-  },
-  "rewrites": [
-    {
-      "source": "/((?!api|_next|favicon.ico).*)",
-      "destination": "/apps/web/$1"
-    }
-  ]
+  }
 }
