--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,11 +21,17 @@
     "@sanity/client": "^7.6.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/visual-editing": "^2.15.0",
+    "@tabler/icons-react": "^3.35.0",
+    "@use-gesture/react": "^10.3.1",
     "@workspace/ui": "workspace:*",
     "algoliasearch": "^5.34.1",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.0",
+    "framer-motion": "^12.23.19",
+    "gsap": "^3.13.0",
     "lucide-react": "0.522.0",
+    "motion": "^12.23.19",
     "next": "15.3.4",
     "next-sanity": "^9.12.0",
     "next-themes": "^0.4.6",
@@ -33,9 +39,11 @@
     "react-dom": "19.1.0",
     "react-instantsearch": "^7.16.2",
     "react-instantsearch-nextjs": "^1.0.1",
+    "react-spring": "^10.0.3",
     "schema-dts": "^1.1.5",
     "server-only": "^0.0.1",
     "slugify": "^1.6.6",
+    "tailwind-merge": "^3.3.1",
     "tsx": "^4.20.3"
   },
   "devDependencies": {
